test/bad/functions/return06.px

func f() Int def
    skip

f()
